<resources>
    <string name="app_name">BILHETE1</string>
    <string name="action_settings">Settings</string>
    <string name="toast_1">instruction</string>
    <string name="toast_2">instruction</string>
    <string name="toast_3">instruction</string>
    <string name="toast_4">instruction</string>
    <string name="toast_5">instruction</string>
    <string name="toast_6">instruction</string>
    <string name="DB_VIA_onCreate">CREATE TABLE Viagens (ID INTEGER PRIMARY KEY AUTOINCREMENT, Linha TEXT, Viagem TEXT, Hora TEXT, Tipvia TEXT, Tipser TEXT, Prefix TEXT); </string>
    <string name="DB_VIA_onUpgrade">"DROP TABLE IF EXISTS Viagens </string>
    <string name="DB_PER_onCreate">CREATE TABLE Percursos (ID INTEGER PRIMARY KEY AUTOINCREMENT, Linha TEXT, Origem TEXT, Destino TEXT, Tarifa TEXT, Seguro TEXT, Arredonda TEXT, Tipvia TEXT); </string>
    <string name="DB_PER_onUpgrade">"DROP TABLE IF EXISTS Percursos </string>
    <string name="DB_TRE_onCreate">CREATE TABLE Trechos (ID INTEGER PRIMARY KEY AUTOINCREMENT, Codigo TEXT, Descri TEXT, UF TEXT, Codmun TEXT); </string>
    <string name="DB_TRE_onUpgrade">"DROP TABLE IF EXISTS Trechos </string>
    <string name="DB_EMP_onCreate">CREATE TABLE EMP (ID INTEGER PRIMARY KEY AUTOINCREMENT, Cnpj TEXT, Descri TEXT, Insest TEXT, Insmun TEXT, Codcrt TEXT,
        Endere TEXT, Numero TEXT, Bairro TEXT, Cidade TEXT, UF TEXT, Codmun TEXT, CEP TEXT, Fone TEXT, Email TEXT, CodTar TEXT, Tipamb TEXT,
        Modelo TEXT, Serie TEXT, Ultbil TEXT, Tipemi TEXT, Tipbil TEXT, Datctg TEXT, Cnae TEXT, Empspl TEXT, Aliicm Text, Urlqrc TEXT, Crtemp TEXT, Crtsen TEXT,
        Alitri TEXT, Maximp INTEGER, Convei TEXT, Pvenda TEXT, Endews TEXT, Rsv001 TEXT, Rsv002 TEXT, Rsv003 TEXT, Modimp TEXT, Ultdat TEXT, Cartao TEXT, Basseg TEXT,
        Naokey TEXT, Mincan TEXT, Ultqrc TEXT, Ndstax TEXT, Nomimp TEXT, Codimp TEXT, Cliidb TEXT, Clisec TEXT, Bancrt TEXT, Bansen TEXT, Banchv TEXT, Banwse TEXT,
        Idepdv TEXT, Basemb TEXT, Agencia TEXT); </string>
    <string name="DB_EMP_onUpgrade">"DROP TABLE IF EXISTS EMP </string>
    <string name="DB_BPE_onCreate">CREATE TABLE BPE (ID INTEGER PRIMARY KEY AUTOINCREMENT, Modser TEXT, Numbpe TEXT, Datemi TEXT, Chvbpe TEXT, Sitbpe TEXT, Agente TEXT, Tippas TEXT,
        Vlrpas DECIMAL, Nomvia TEXT, Treori TEXT, Tredes TEXT, Qtdimp INTEGER, Transf TEXT, Rsv001 TEXT, Rsv002 TEXT, Rsv003 TEXT, Codlin TEXT, Codori TEXT, Coddes TEXT, Datsai TEXT,
        Numcad TEXT, Vlrtar TEXT, Vlremb TEXT, Vlrseg TEXT, Vlrarr TEXT, Codvei TEXT, Pagmto TEXT, Codban TEXT, Codaut TEXT, Nidpag TEXT); </string>
    <string name="DB_BPE_onUpgrade">"DROP TABLE IF EXISTS BPE </string>
    <string name="DB_USR_onCreate">CREATE TABLE USR (ID INTEGER PRIMARY KEY AUTOINCREMENT, Usrnom TEXT, Usrsen TEXT, Fectur TEXT, Ultatu TEXT, Tippvd TEXT, Atuusr TEXT); </string>
    <string name="DB_USR_onUpgrade">"DROP TABLE IF EXISTS USR </string>
    <string name="DB_LIN_onCreate">CREATE TABLE LIN (ID INTEGER PRIMARY KEY AUTOINCREMENT, Codigo TEXT, Descri TEXT, Prefix TEXT); </string>
    <string name="DB_LIN_onUpgrade">"DROP TABLE IF EXISTS LIN </string>
    <string name="DB_TMP_onCreate">CREATE TABLE TMP (ID INTEGER PRIMARY KEY AUTOINCREMENT, Codigo TEXT, Descri TEXT, Agente TEXT, Datemi TEXT, Qqtbil INTEGER, Vlrtot DECIMAL, Vlrvale DECIMAL, Vlrembd DECIMAL,
        Vlrembo DECIMAL, Vlrpix DECIMAL, Vlrembp DECIMAL); </string>
    <string name="DB_TMP_onUpgrade">"DROP TABLE IF EXISTS TMP </string>
    <string name="DB_GRA_onCreate">CREATE TABLE GRA (ID INTEGER PRIMARY KEY AUTOINCREMENT, Cpfpas TEXT, Nompas TEXT, Docpas TEXT, Linha TEXT, Sentido TEXT, Tipgra TEXT, Tipdes TEXT, Mesano TEXT, Qtdpas TEXT, Qtdmes TEXT, Qtdlin TEXT); </string>
    <string name="DB_GRA_onUpgrade">"DROP TABLE IF EXISTS GRA </string>
    <string name="DB_SER_onCreate">CREATE TABLE SER (ID INTEGER PRIMARY KEY AUTOINCREMENT, Tipser TEXT, Vlrser TEXT); </string>
    <string name="DB_SER_onUpgrade">"DROP TABLE IF EXISTS SER </string>
    <string name="DB_TKT_onCreate">CREATE TABLE TICKET (ID INTEGER PRIMARY KEY AUTOINCREMENT, Codigo TEXT, Chvtkt TEXT, Dathor TEXT, Tipser TEXT, Vlrtkt TEXT, Forpag TEXT, Terminal TEXT, Usuario TEXT, Codope TEXT, Sincser TEXT, Status TEXT); </string>
    <string name="DB_TKT_onUpgrade">"DROP TABLE IF EXISTS TICKET </string>
    <string name="title_activity_via">ViaActivity</string>
    <string name="title_activity_tre">TreActivity</string>
    <string name="title_activity_edita">EmpActivity</string>
    <string name="title_activity_config">ActivityConfig</string>
    <string name="title_activity_login">Começar</string>
    <string name="drawer_open">Abrir Menu Lateral</string>
    <string name="drawer_close">Fechar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_consulta">Consultas</string>
    <string name="title_activity_ws">WSActivity</string>
    <string name="mais"> &#43; </string>
    <string name="menos"> &#45; </string>
    <string-array name="motivos_array">
        <item>Passageiro desistiu da viagem</item>
        <item>Passageiro embarcou no carro errado</item>
        <item>Trecho informado incorreto</item>
        <item>Valores nao conferem</item>
        <item>Passageiro nao pagou</item>
        <item>Outros (Obrigatório Obs manual)</item>
    </string-array>
    <string-array name="tipdoc_array">
        <item>1 - RG</item>
        <item>2 - Titulo de Eleitor</item>
        <item>3 - Passaporte</item>
        <item>4 - CNH</item>
        <item>5 - Outros</item>
    </string-array>
    <string-array name="gratuidade_array">
        <item>00 - SEM GRATUIDADE</item>
        <item>02 - IDOSO</item>
        <item>03 - CRIANCA</item>
        <item>04 - DEFICIENTE FISICO</item>
        <item>99 - TEA - TRANSTORNO DO ESPECTRO AUTISTA</item>
    </string-array>
    <string-array name="desconto_array">
        <item>Sem Desconto</item>
        <item>1 - TOTAL 100%</item>
        <item>2 - PARCIAL 50%</item>
    </string-array>
    <string-array name="impressora_array">
        <item>00 - DEFINIR IMPRESSORA</item>
        <item>01 - SUNMI</item>
        <item>02 - CIELO LIO</item>
        <item>03 - ARNY BLUETOOTH</item>
        <item>04 - ARNY AIDL</item>
        <item>05 - DTS-2500</item>
    </string-array>
    <string-array name="formas_array">
        <item>01 - VALE TRANSPORTE</item>
        <item>02 - PIX</item>
    </string-array>
    <string-array name="service_types">
        <item>1 - Sanitários</item>
        <item>2 - Ducha</item>
    </string-array>
    <string name="title_activity_parametros">ParametrosActivity</string>
    <string name="title_activity_encerra">EncerraActivity</string>
    <string name="title_activity_cancela_pagamento">CancelaPagamentoActivity</string>
    <string name="title_activity_cielo">CieloActivity</string>
    <string name="TEST">Test Receipt</string>
    <string name="godown_keeper">Keeper: John Doe</string>
    <string name="send_printer">Impressora: DTS-2500</string>
    <string name="new_and_select_label">Criar ou selecionar etiqueta</string>
    <string name="no_connect_blue_tooth">Bluetooth não conectado</string>
    <string name="new_label">Nova etiqueta</string>
    <string name="print_label">Imprimir etiqueta</string>
    <string name="fast_label">Impressão rápida</string>
    <string name="label_mode">Modelo de etiqueta</string>
    <string name="label">Etiqueta</string>
    <string name="insert">Inserir</string>
    <string name="attribute">Atributo</string>
    <string name="content">Conteúdo</string>
    <string name="back">Voltar</string>
    <string name="printf_blue_list">Lista de impressoras</string>
    <string name="template_list">Lista de modelos</string>
    <string name="printf_blue_list_search">Buscar</string>
    <string name="printf_blue_list_stop">Parar</string>
    <string name="main_title">Imprimir</string>
    <string name="label_attribute">Atributos da etiqueta</string>
    <string name="data_content">Conteúdo dos dados</string>
    <string name="label_name">Nome da etiqueta</string>
    <string name="label_w">Largura da etiqueta</string>
    <string name="label_h">Altura da etiqueta</string>
    <string name="label_interval">Intervalo da etiqueta</string>
    <string name="label_printf_direction">Direção de impressão</string>
    <string name="data_type">Tipo de dados</string>
    <string name="label_paper_interval">Intervalo do papel</string>
    <string name="label_paper_consecutively">Papel contínuo</string>
    <string name="label_paper_location_hole">Furo de posicionamento</string>
    <string name="label_paper_clearance_paper">Papel com intervalo</string>
    <string name="label_paper_black">Marca preta</string>
    <string name="interval_length">Comprimento do intervalo</string>
    <string name="picture">Imagem</string>
    <string name="background_picture">Imagem de fundo</string>
    <string name="picture_name">Nome da imagem</string>
    <string name="no_picture">Nenhuma imagem de fundo vinculada</string>
    <string name="select_picture">Selecionar imagem</string>
    <string name="clear_picture">Limpar fundo</string>
    <string name="printf_migration">Margens laterais</string>
    <string name="left_distance">Margem esquerda</string>
    <string name="right_distance">Margem direita</string>
    <string name="no">Nenhum</string>
    <string name="manual_input">Entrada manual</string>
    <string name="gradient_of_data">Dados incrementais</string>
    <string name="current_content">Conteúdo atual</string>
    <string name="pass_the_variable">Variável incremental</string>
    <string name="word_space">Espaçamento entre caracteres</string>
    <string name="gradient_of_the_number">Quantidade incremental</string>
    <string name="horizontal_center">Centralizar horizontalmente</string>
    <string name="vertical_center">Centralizar verticalmente</string>
    <string name="rotation_angle">Ângulo de rotação</string>
    <string name="qr_code">Código QR</string>
    <string name="qc_code">Código de barras</string>
    <string name="typeface">Fonte</string>
    <string name="error_correction_level">Nível de correção de erro</string>
    <string name="text_position">Posição do texto</string>
    <string name="no_text">Sem texto</string>
    <string name="low">Baixo</string>
    <string name="medium">Médio</string>
    <string name="height">Alto</string>
    <string name="strong">Forte</string>
    <string name="cancelp">Cancelar</string>
    <string name="determine">Confirmar</string>
    <string name="please_improve_the_parameters">Por favor, complete os parâmetros!</string>
    <string name="set_label_content">Faixa: 1 - 1000, unidade: milímetros</string>
    <string name="company_mm">Unidade: milímetros</string>
    <string name="abnormal_data">Dados anormais</string>
    <string name="please_enter_content">Por favor, insira o conteúdo</string>
    <string name="current_single">Modo de seleção única</string>
    <string name="current_more">Modo de seleção múltipla</string>
    <string name="single">Seleção única</string>
    <string name="more">Seleção múltipla</string>
    <string name="position_size">Tamanho e posição</string>
    <string name="font_size">Tamanho da fonte</string>
    <string name="font_bold">Negrito</string>
    <string name="bold">Negrito</string>
    <string name="no_bold">Sem negrito</string>
    <string name="test_bold_font">Testar fonte em negrito</string>
    <string name="current_bluetooth">Bluetooth atual:</string>
    <string name="no_connect_bluetooth">Bluetooth não conectado</string>
    <string name="test_80_receipt">Testar recibo de 80mm</string>
    <string name="test_58_receipt">Testar recibo de 58mm</string>
    <string name="label_name_title">Nome da Etiqueta</string>
    <string name="label_name_cannot_be_empty">O nome da etiqueta não pode estar vazio</string>
    <string name="label_name_input">Nome da Etiqueta:</string>
</resources>