<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_main_test_80"
        android:text="@string/test_80_receipt"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_main_test_58"
        android:text="@string/test_58_receipt"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:text="@string/font_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/et_main_test_size"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:hint="Tamanho da Fonte"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:text="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <RadioGroup
            android:id="@+id/rg_main_test"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb_main_test_bold"
                android:layout_weight="1"
                android:text="@string/bold"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <RadioButton
                android:id="@+id/rb_main_test_no_bold"
                android:layout_weight="1"
                android:text="@string/no_bold"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/btn_main_test_bold"
        android:text="@string/test_bold_font"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:text="@string/current_bluetooth"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tv_main_bluetooth"
            android:layout_toStartOf="@+id/tv_main_bluetooth" />
        <TextView
            android:gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:text="@string/no_connect_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/tv_main_bluetooth" />
    </RelativeLayout>

</LinearLayout>