<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/tran_light_grey"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@android:color/white"
        android:layout_centerInParent="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textSize="22sp"
            android:background="@color/title"
            android:id="@+id/tv_pop_title"
            android:textColor="@android:color/white"
            android:text="@string/label_name_title"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tv_pop_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:text="@string/label_name_cannot_be_empty"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_pop_input_name"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/black"
                android:text="@string/label_name_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_pop"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@android:color/black"
                android:inputType="text"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/determine"
                android:text="@string/determine"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>